<resources>
     <string name="images_url">http://www.mnemobox.com/uploads/images/</string>
     <string name="lookup_word_url">http://mnemobox.com/webservices/lookupWord.php?from=%1$s&amp;to=%2$s&amp;word=%3$s</string>
     <string name="recordings_url">http://mnemobox.com/recordings/words/</string>
     <string name="trace_error_url">http://www.mnemobox.com/webservices/trace_error.php?lang=%1$s&amp;tid=%2$d</string>
	 <string name="getwordset_url">http://www.mnemobox.com/webservices/getwordset.php?from=%1$s&amp;to=%2$s&amp;wordset=%3$s</string>
	 <string name="getsystemwordset_url">http://www.mnemobox.com/webservices/getwordset.php?type=systemwordset&amp;from=%1$s&amp;to=%2$s&amp;wordset=%3$d</string>
	 <string name="getremembermewordset_url">http://www.mnemobox.com/webservices/getwordset.php?type=rememberme&amp;from=%1$s&amp;to=%2$s&amp;wordset=0&amp;uid=%3$d</string>
	 <string name="getlearnedwordset_url">http://www.mnemobox.com/webservices/getwordset.php?type=learned&amp;from=%1$s&amp;to=%2$s&amp;wordset=0&amp;uid=%3$d</string>
	 <string name="getselectedwords_url">http://www.mnemobox.com/webservices/getwordset.php?type=selected&amp;from=%1$s&amp;to=%2$s&amp;wordset=0&amp;words=%3$s</string>
     <string name="history_url">http://www.mnemobox.com/webservices/userHistory.xml.php?from=%1$s&amp;to=%2$s</string>
	 <string name="money_history_url">http://www.mnemobox.com/webservices/userMoneyHistory.xml.php?from=%1$s&amp;to=%2$s&amp;lang=%3$s&amp;email=%4$s&amp;pass=%5$s</string>
	 <string name="stats_url">http://www.mnemobox.com/webservices/userStats.xml.php?from=%1$s&amp;to=%2$s&amp;email=%3$s&amp;pass=%4$s</string>
	 <string name="tasks_url">http://www.mnemobox.com/webservices/userTasks.php?from=%1$s&amp;to=%2$s&amp;email=%3$s&amp;pass=%4$s</string>
	 <string name="forgotten_url">http://www.mnemobox.com/webservices/userForgotten.xml.php?from=%1$s&amp;to=%2$s&amp;email=%3$s&amp;pass=%4$s</string>
	 <string name="rememberme_url">http://www.mnemobox.com/webservices/userRememberMeWords.xml.php?from=%1$s&amp;to=%2$s&amp;email=%3$s&amp;pass=%4$s</string>
	 <string name="learned_url">http://www.mnemobox.com/webservices/userLearnedWords.xml.php?from=%1$s&amp;to=%2$s&amp;email=%3$s&amp;pass=%4$s</string>
	 <string name="syncforgotten_url">http://www.mnemobox.com/webservices/syncForgottenWords.php</string>
	 <string name="syncrememberme_url">http://www.mnemobox.com/webservices/syncRememberMeWords.php</string>
	 <string name="synclearned_url">http://www.mnemobox.com/webservices/syncLearnedWords.php</string>
	 <string name="userinfo_url">http://www.mnemobox.com/webservices/userProfile.xml.php?email=</string>
	 <string name="fullaccess_url">http://www.mnemobox.com/webservices/fullAccess.php?from=%1$s&amp;to=%2$s&amp;email=%3$s&amp;pass%4$s&amp;token=95768</string>
	 <string name="addmnemones_url">http://www.mnemobox.com/webservices/addMnemons.php?email=%1$s&amp;pass=%2$s&amp;m=%3$d&amp;token=95768</string>
	 <string name="tryunlock_url">http://www.mnemobox.com/webservices/tryUnlock.php?from=%1$s&amp;to=%2$s&amp;email=%3$s&amp;pass=%4$s&amp;lvl=%5$s&amp;wid=%6$d&amp;cost=%7$d</string>
     <string name="avatars_url">http://www.mnemobox.com/uploads/avatars/</string>
     <string name="tracehistory_url">http://www.mnemobox.com/webservices/traceHistory.php?from=%1$s&amp;to=%2$s&amp;email=%3$s&amp;pass=%4$s&amp;good=%5$d&amp;bad=%6$d&amp;mode=%7$s&amp;wordset_id=%8$d</string>
	 <string name="saveforgotten_url">http://www.mnemobox.com/webservices/forgottenWords.php?from=%1$s&amp;to=%2$s&amp;email=%3$s&amp;pass=%4$s&amp;serialData=%5$s</string>
	 <string name="saverememberme_url">http://www.mnemobox.com/webservices/rememberWord.php?from=%1$s&amp;to=%2$s&amp;email=%3$s&amp;pass=%4$s&amp;wordid=%5$d</string>
     <string name="dict_url">http://mnemobox.com/dict/</string>
     <string name="login_url">http://www.mnemobox.com/webservices/loginService.php?email=%1$s&amp;pass=%2$s</string>
	 <string name="gettranslation_url">http://mnemobox.com/webservices/getTranslation.php?from=%1$s&amp;to=%2$s&amp;translation_id=%3$d</string>
	 <string name="getcategories_url">http://www.mnemobox.com/webservices/getCategories.php?from=%1$s&amp;to=%2$s</string>
     <string name="image_pen">http://www.mnemobox.com/images/pen.png</string>
	 <string name="image_prezentacja">http://www.mnemobox.com/images/prezentacja.png</string>
	 <string name="image_konwersacja">http://www.mnemobox.com/images/konwersacja.png</string>
	 <string name="image_dyktando">http://www.mnemobox.com/images/dyktando.png</string>
	 <string name="image_recording">http://www.mnemobox.com/images/recording.png</string>
	 <string name="image_wybieracz">http://www.mnemobox.com/images/wybieracz.png</string>
	 <string name="image_kartoniki">http://www.mnemobox.com/images/kartoniki.png</string>
	 <string name="check_wordset_access_url">http://www.mnemobox.com/webservices/checkWordsetAccess.php?from=%1$s&amp;to=%2$s&amp;uid=%3$d&amp;wid=%4$d</string>
     <string name="getwordsetslist_url">http://mnemobox.com/webservices/getWordsetsList.php?from=%1$s&amp;to=%2$s&amp;</string>
     <string name="word_postits_url">http://www.mnemobox.com/webservices/getContextPostIts.xml.php?from=%1$s&amp;to=%2$s&amp;contextId=%3$d&amp;email=%4$s&amp;pass=%5$s</string>
	 <string name="save_postit_url">http://www.mnemobox.com/webservices/savePostIts.php?from=%1$s&amp;to=%2$s&amp;serialData=%3$s&amp;email=%4$s&amp;pass=%5$s</string>
     <string name="register_user_url">http://mnemobox.com/webservices/registerUser.php?email=%1$s&amp;pass=%2$s&amp;fn=%3$s&amp;ln=%4$s</string>
     <string name="app_market_url">https://market.android.com/details?id=pl.electoroffline</string>
     <string name="check_paid_up_valid_thru_url">http://mnemobox.com/webservices/paidUpAccessValidThru.php?email=%1$s&amp;pass=%2$s&amp;token=95768</string>
     <string name="synclearninghistory_url">http://mnemobox.com/webservices/syncLearningHistory.php?from=%1$s&amp;to=%2$s</string>
     <string name="synclearningstats_url">http://mnemobox.com/webservices/syncLearningStats.php?from=%1$s&amp;to=%2$s&amp;email=%3$s&amp;pass=%4$s</string>
     <string name="getlearningstats_url">http://mnemobox.com/webservices/getLearningStats.xml.php?from=%1$s&amp;to=%2$s&amp;email=%3$s&amp;pass=%4$s</string>
     <string name="app_name">elector.pl: ENGLISH FREE</string>
     <string name="app_package">pl.electoroffline</string>
     <string name="app_title">ENGLISH OFFLINE</string>
     <string name="facebook_app_id">960619933952866</string>
     <string name="foreign_code">EN</string>
     <string name="native_code">PL</string>
     <string name="foreign_code_lower">en</string>
     <string name="native_code_lower">pl</string>
     <string name="english">English</string>
     <string name="domain_name">elector.pl</string>
     <string name="main_drawer_open">Drawer Open</string>
     <string name="main_drawer_close">Drawer Close</string>
     <string name="buyproduct">100 000 mnemoney</string>
     <string name="buyproduct2">25 000 mnemoney</string>
     <string name="buyproduct3">Full Access</string>
     <string name="help_url">help_url</string>
     <string name="learn_more">learn_more</string>
     <string name="restoring_transactions">restoring_transactions</string>
     <string name="edit_payload_accept">edit_payload_accept</string>
     <string name="edit_payload_clear">edit_payload_clear</string>
     <string name="elector_logo">Elector Logo</string>
     <string name="feedback_subject">ENGLISH OFFLINE: Feedback</string>
     <string name="feedback_email">michzio\@hotmail.com</string>
	  <string name="cannot_connect_title">An error has been encountered while connecting to internet&#8230;</string>
     <string name="cannot_connect_message">An error has been encountered while connecting to internet&#8230;</string>
     <string name="billing_not_supported_title">Payments are unavailable &#8230;</string>
     <string name="billing_not_supported_message">Payments are unavailable &#8230;</string>
     <string name="subscriptions_not_supported_title">Payments are unavailable &#8230;</string>
     <string name="subscriptions_not_supported_message">Payments are unavailable &#8230;</string>
     <string name="dict_not_found">given keyword hasn&#8217;t been found in dictionary&#8230;</string>
     <string name="dict_fetching_msg">retrieve suggestions&#8230;</string>
	 <string name="no_word">>There\'s no such word</string>
	 <string name="no_word_to_show_details">The word to show details has not been found!</string>
	 <string name="no_word_to_share">>The word to share has not been found!</string>
	 <string name="no_word_to_remember">>The word to remember has not been found!</string>
	 <string name="no_word_to_learned">>The word could not be added to learned words!</string>
	 <string name="internet_lost">Internet Connection Lost!</string>
	 <string name="history_times">Times: </string>
	 <string name="history_effectivness">Effectiveness: </string>
	 <string name="history_last_access">Last Access: </string>
	 <string name="vocabulary">Vocabulary</string>
	 <string name="dictionary">Dictionary</string>
	 <string name="learned">Learned Words</string>
	 <string name="profile">Profile</string>
	 <string name="forgotten">Forgotten</string>
	 <string name="forgotten_words">Forgotten Words</string>
	 <string name="mywords">My Words</string>
	 <string name="words_to_remember">Words To Remember</string>
	 <string name="showdetails">Show Details</string>
	 <string name="shareword">Share Word</string>
	 <string name="addtorememberme">Add to Remember Me</string>
	 <string name="addtolearned">Add To Learned</string>
	 <string name="report_an_error">Report an error</string>
	 <string name="no_sentences_label">There aren&#8217;t any sentences&#8230;</string>
	 <string name="default_email">your@email.com</string>
	 <string name="no_name">no name</string>
	 <string name="header_sign_in">Sign In +</string>
	 <string name="header_sync">and sync with elector.pl</string>
	 <string name="level_A1">A1</string>
	 <string name="level_A2">A2</string>
	 <string name="level_B1">B1</string>
	 <string name="level_B2">B2</string>
	 <string name="level_C1">C1</string>
	 <string name="level_C2">C2</string>
	 <string name="default_foreign_word">foreign</string>
	 <string name="default_transcription">transcription</string>
	 <string name="default_native_word">native</string>
	 <string name="send_feedback_label">Have you found an error in the application? Would you do something differently? Enter here your remarks on the application, the proposed changes. We are open to any suggestions for improvement.</string>
	 <string name="send_feedback_button">Send your feedback</string>
	 <string name="send_feedback_text">Place for your remarks&#8230;</string>
	 <string name="sound_volume">Sound Volume</string>
	 <string name="sound_volume_summary">Speech recording volume settings.</string>
	 <string name="enable_pronunciation">Enable Pronunciation</string>
	 <string name="enable_pronunciation_summary">Turn on/off the pronunciation of words.</string>
	 <string name="sound_settings">Sound Settings</string>
	 <string name="language_settings">Language Settings</string>
	 <string name="native_language_title">Native Language</string>
	 <string name="native_language_summary">Select your native language.</string>
	 <string name="menu_language_title">Menu Language</string>
	 <string name="menu_language_summary">Select menu language.</string>
	 <string name="application_settings">Application Settings</string>
	 <string name="sync_settings">Synchronization Settings</string>
	 <string name="sync_settings_summary">Customize words synchronization.</string>
	 <string name="notification_settings">Notification Settings</string>
	 <string name="notification_settings_summary">Customize app notifications, widgets.</string>
	 <string name="word_image">Word Image.</string>
	 <string name="word_speech_recording">Word speech recording.</string>
</resources>