<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/london"
    android:id="@+id/mainSwipeLayout">
	   <TableLayout 
		android:id="@+id/MainActivityTable"
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:layout_centerInParent="true"
		android:layout_marginTop="20dp"
		android:layout_marginBottom="20dp"
		android:layout_marginLeft="50dp"
		android:layout_marginRight="50dp">
		<TableRow android:id="@+id/TableRow01" 
		    	  android:layout_width="match_parent"
		          android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="center">
		 	<Button
		         android:id="@+id/vocabularyBtn"
		         android:contentDescription="@string/vocabulary"
		         android:background="@+drawable/vocabulary"
		         android:layout_width="match_parent"
		         android:layout_height="match_parent"
		         android:layout_margin="3dp"
		         android:text="@string/vocabulary"
		         android:textColor="#FFFFFF"
		         android:gravity="bottom|center_horizontal"
		         android:layout_weight="1"
			     android:textSize="16sp"
		  	/>
		 	<Button
		         android:id="@+id/dictBtn"
		         android:contentDescription="@string/dictionary"
		         android:background="@+drawable/dictionary"
		         android:layout_width="match_parent"
		         android:layout_height="match_parent"
		         android:layout_margin="3dp"
		         android:text="@string/dictionary"
		         android:textColor="#FFFFFF"
		         android:gravity="bottom|center_horizontal"
		         android:layout_weight="1"
			     android:textSize="16sp"
		        />
		 	 <Button
		         android:id="@+id/learnedBtn"
		         android:contentDescription="@string/learned"
		         android:background="@+drawable/learned"
		         android:layout_width="match_parent"
		         android:layout_height="match_parent"
		         android:layout_margin="3dp"
		         android:text="@string/learned"
		         android:textColor="#FFFFFF"
		         android:gravity="bottom|center_horizontal"
		         android:layout_weight="1"
			     android:textSize="16sp"
		        />
 		</TableRow>
 		<TableRow android:id="@+id/TableRow02" 
 		    	  android:layout_width="match_parent"
		          android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="center">
		  	<Button
		          android:id="@+id/profileBtn"
		          android:contentDescription="@string/profile"
		          android:background="@+drawable/profile" 
		          android:layout_width="match_parent"
		          android:layout_height="match_parent"
		          android:layout_margin="3dp"
		          android:text="@string/profile"
		          android:textColor="#FFFFFF"
		          android:gravity="bottom|center_horizontal"
		          android:layout_weight="1"
			      android:textSize="16sp"
		        />
		    <Button
		        android:id="@+id/forgottenBtn"
		        android:contentDescription="@string/forgotten_words"
		        android:background="@+drawable/forgotten"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_margin="3dp"
		        android:text="@string/forgotten"
		        android:textColor="#FFFFFF"
		        android:gravity="bottom|center_horizontal"
		        android:layout_weight="1"
			    android:textSize="16sp"
		        />
		  <Button
		        android:id="@+id/toRememberBtn"
		        android:contentDescription="@string/words_to_remember"
		        android:background="@+drawable/mywords" 
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_margin="3dp"
		        android:text="@string/mywords"
		        android:textColor="#FFFFFF"
		        android:gravity="bottom|center_horizontal"
		        android:layout_weight="1"
			    android:textSize="16sp"
		        />
  		</TableRow>
	</TableLayout>
</RelativeLayout>

