<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/bigben"
    >
       <RelativeLayout
      android:id="@+id/wordBasics"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:orientation="horizontal"
	  android:paddingTop="25dp"
	  android:paddingLeft="10dp">
			<ImageView
	        android:id="@+id/audioBtn"
	        android:contentDescription="@string/word_speech_recording"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="27dp"
	        android:layout_marginRight="15dp"
	        android:background="@drawable/audio_button"
	        android:layout_alignParentRight="true"
	        />
		   <LinearLayout
		    android:id="@+id/word_info_layout"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="0dp"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="50dp"
		    android:layout_alignParentLeft="true"
		    android:orientation="vertical">
			   <TextView 
				android:id="@+id/foreignWord"
				android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
				android:text="@string/default_foreign_word"
			    android:textColor="@+drawable/buttonColor"
				android:textSize="16sp"
				android:padding="2dp"
			    />
			   <TextView 
			    android:id="@+id/transcription"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/default_transcription"
			    android:textSize="16sp"
			    android:textColor="#6699FF"
			    android:background="#F5F9FA"
			    android:padding="2dp"
			   />
			   <TextView 
				android:id="@+id/nativeWord"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/default_native_word"
				android:textColor="#333333"
				android:textSize="16sp"
				android:padding="2dp"
			   />
		</LinearLayout>  
		<ImageView
		android:contentDescription="@string/word_image"
		android:id="@+id/wordImage"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:maxHeight="150dp"
		android:layout_below="@id/word_info_layout"
		android:layout_margin="20dp"
		android:layout_centerHorizontal="true"
		android:adjustViewBounds="true"
		android:src="@drawable/default_image"
		android:visibility="visible"
		/>
	</RelativeLayout>
	<ListView 
	    android:id="@+id/sentencesListView"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:visibility="gone"
	    android:background="#AAFFFFFF"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="5dp"
	    android:layout_marginTop="8dp"
	/>
	<TextView 
	    android:id="@+id/noSentencesLabel"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center"
	    android:text="@string/no_sentences_label"
	    android:background="#AAFFFFFF"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="5dp"
	    android:layout_marginTop="8dp"
    />

</LinearLayout>
