<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/london"
    >
	<TableLayout 
	android:id="@+id/SelectByLevelActivityTable"
	android:layout_centerHorizontal="true"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:layout_marginTop="15dp"
	android:layout_marginBottom="15dp"
	android:layout_marginLeft="50dp"
	android:layout_marginRight="50dp"
	>
	<TableRow  android:layout_width="match_parent"
	           android:layout_height="match_parent"
	           android:layout_weight="1">
		 <Button
		        android:id="@+id/levelA1Btn"
		        android:contentDescription="@string/level_A1"
		        android:layout_width="match_parent"
            	android:layout_height="match_parent"
            	android:layout_weight="1"
		        android:background="@+drawable/buttonColor"
		        android:layout_margin="2dp"
		        android:text="@string/level_A1"
		        android:textColor="#FFFFFF"
		        android:textSize="25sp"
		  />
		   <Button
		        android:id="@+id/levelB1Btn"
		        android:contentDescription="@string/level_B1"
		        android:layout_width="match_parent"
            	android:layout_height="match_parent"
            	android:layout_weight="1"
		        android:background="@+drawable/buttonColor"
		        android:layout_margin="2dp"
		        android:text="@string/level_B1"
		        android:textColor="#FFFFFF"
		        android:textSize="25sp"
		        />
		  <Button
		        android:id="@+id/levelC1Btn"
		        android:contentDescription="@string/level_C1"
		        android:layout_width="match_parent"
            	android:layout_height="match_parent"
            	android:layout_weight="1"
		        android:background="@+drawable/buttonColor"
		        android:layout_margin="2dp"
		        android:text="@string/level_C1"
		        android:textColor="#FFFFFF"
		        android:textSize="25sp"
		        />
	 </TableRow>
	 <TableRow  android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_weight="1">
	  <Button
	        android:id="@+id/levelA2Btn"
	        android:contentDescription="@string/level_A2"
	        android:layout_width="match_parent"
           	android:layout_height="match_parent"
            android:layout_weight="1"
	        android:background="@+drawable/buttonColor"
	        android:layout_margin="2dp"
	        android:text="@string/level_A2"
	        android:textColor="#FFFFFF"
	        android:textSize="25sp"
	        />
	  <Button
	        android:id="@+id/levelB2Btn"
	        android:contentDescription="@string/level_B2"
	        android:layout_width="match_parent"
           	android:layout_height="match_parent"
            android:layout_weight="1"
	        android:background="@+drawable/buttonColor"
	        android:layout_margin="2dp"
	        android:text="@string/level_B2"
	        android:textColor="#FFFFFF"
	        android:textSize="25sp"
	       />
	  <Button
	        android:id="@+id/levelC2Btn"
	        android:contentDescription="@string/level_C2"
	        android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
	        android:background="@+drawable/buttonColor"
	        android:layout_margin="2dp"
	        android:text="@string/level_C2"
	        android:textColor="#FFFFFF"
	        android:textSize="25sp"
	        />
	  </TableRow>
	</TableLayout>
</RelativeLayout>

