<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="horizontal"
  android:id="@+id/newUserHeader" 
  android:background="@drawable/buttonColor"
>
  	 <ImageView
	   android:id="@+id/user_icon"
	   android:layout_width="40dp"
	   android:layout_height="40dp"
	   android:layout_margin="8dp"
	   android:src="@+drawable/default_user"
      />
       <LinearLayout 
        android:id="@+id/user_account_info"
	    android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:orientation="vertical"
 		android:gravity="left"
 		android:paddingTop="8dp"
 		android:paddingBottom="3dp"
 		android:visibility="gone"
	    > 
		  <TextView 
			 android:id="@+id/user_email"   
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"  
			 android:padding="1dp"  
			 android:textSize="14sp"
			 android:textColor="@android:color/white" 
			 android:text="@string/default_email"
		  />
		   <TextView 
			 android:id="@+id/user_name"   
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"  
			 android:padding="1dp"  
			 android:textSize="12sp"
			 android:textColor="@android:color/white" 
			 android:text="@string/no_name"
		  />
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/new_user_account"
	    android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:orientation="vertical"
 		android:gravity="left"
 		android:paddingTop="8dp"
 		android:paddingBottom="3dp"
 		android:visibility="visible"
	    > 
		  <TextView  
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"  
			 android:padding="1dp"  
			 android:textSize="14sp"
			 android:textColor="@android:color/white" 
			 android:text="@string/header_sign_in"
		  />
		   <TextView   
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"  
			 android:padding="1dp"  
			 android:textSize="12sp"
			 android:textColor="@android:color/white" 
			 android:text="@string/header_sync"
		  />
	</LinearLayout>
</LinearLayout>
