<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bigben"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/feedbackLayout"
    >

   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send_feedback_label"
        android:text="@string/send_feedback_label"
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="16sp"
      />
    
  <EditText
        android:id="@+id/feedback_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#AAeeeeee"
        android:inputType="textEmailAddress|textMultiLine"
        android:lines="20"
        android:minLines="10"
        android:text="@string/send_feedback_text"
        android:scrollHorizontally="false"
        android:scrollbars="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
         android:textSize="14sp"
         android:padding="15dp"
         android:gravity="top|left"
        android:singleLine="false" />
 <Button
        android:id="@+id/sendFeedback"
        android:contentDescription="@string/send_feedback_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
	    android:textSize="16sp"
	    android:padding="20dp"
	    android:textColor="#FFFFFFFF"
        android:text="@string/send_feedback_button"
  />

 
</LinearLayout>
</ScrollView>

